Test/errors/err_arrayview_ptr_param.cb
expect_error("pointer to array-view 'double[]*'") {
    int solveParallel(double[]* outFinal) { return 0; }
}
